# rstatd

./: .gitattributes  AUTHORS  CMakeLists.txt  ChangeLog  Makefile  Makefile.am  Makefile.in  README  config.h  config.h.in  config.status  configure  configure.in  doPatch.sh  getdata.c  getdata.c.orig  getdata.h  getdata22.c  getdata22.h  getdata24.c  getdata24.h  getdata26.c  getdata26.h  getdata_darwin.c  getdata_darwin.h  mkinstalldirs  rpc.rstatd  rpc.rstatd.8  rpc.rstatd.plist  rstat.h  rstat.x  rstat_clnt.c  rstat_main.c  rstat_main.c.orig  rstat_proc.c  rstat_proc.h  rstat_svc.c  rstat_xdr.c  rstatd.8  rsysinfo  (+5 more)
autom4te.cache/: output.1  requests  traces.0  traces.1
patches/: Makefile.am.patch  getdata.c.patch  rstat.x.patch  rstat_main.c.patch  rsysinfo.c.patch  rup.c.64.patch  rup.c.patch
